[workspace]
members = ["contracts/*"]
resolver = '2'

[workspace.package]
authors = ["Oraichain Labs"]
documentation = "https://github.com/oraichain/refund-btc.git"
edition = "2021"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]
homepage = "https://orai.io"
license = "MIT"
repository = "https://github.com/oraichain/refund-btc.git"
version = "0.1.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 'z'
overflow-checks = true
panic = 'abort'
rpath = false

[workspace.dependencies]
bech32 = "0.11.0"
cosmwasm-schema = {version = "1.5"}
cosmwasm-std = {version = "1.5", features = ["stargate"]}
cosmwasm-storage = {version = "1.5"}
cosmwasm-testing-util = {git = "https://github.com/oraichain/cosmwasm-testing-util.git", rev = "4887c6e"}
cw-storage-plus = {version = "1.0.1"}
cw2 = {version = "1.0.1"}
cw20 = {version = "1.0.1"}
cw20-base = {version = "1.0.1"}
derive_more = "0.99.17"
oraiswap = {git = "https://github.com/oraichain/oraiswap.git", rev = "c5fd186"}
refund-btc = {path = "contracts/refund-btc"}
serde = "1.0.133"
serde_json = "1.0.74"
thiserror = "1.0.26"
