[package]
authors = {workspace = true}
documentation = {workspace = true}
edition = {workspace = true}
homepage = {workspace = true}
license = {workspace = true}
name = "refund-btc"
repository = {workspace = true}
version = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = {workspace = true}
cosmwasm-std = {workspace = true}
cw-storage-plus = {workspace = true}
cw2 = {workspace = true}
cw20 = {workspace = true}
cw20-base = {workspace = true}
derive_more = {workspace = true}
oraiswap = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
cosmwasm-testing-util = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
